# ish64-ios-port

./: .gitignore  1.sh  1.txt  2.txt  ABOUT.md  ARCHITECTURE.md  BUILDING.md  BUILD_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  ERROR_TRACKING.md  LICENSE  LICENSE-ISH64  NOTICE  README.md  ROADMAP.md  STATUS.md  auto_fix_ish.sh  auto_fix_ish_wrappers.py  bootstrap_gitea_local.sh  bootstrap_github_issues.sh  clang  configure_gitea_domain.sh  create_wrlock_compat.sh.bak_patch  dummy_clang.c  finish_ish64.sh  fix-fallthrough.sh  fix_build.sh  fix_ish.sh  fix_ish64_compliance.sh  fix_slirp_ios.sh  fix_slirp_send_and_build.sh  ish64_aarch64_fix.patch  ish64_auto_fix.sh  ish64_fiber_fix.patch  ish64_offset_fix.patch  ish64_ultimate_build.sh  lock.h  meson.build  (+13 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  build.md  deps.md  runtime.md
.github/workflows/: build.yml  ci.yml  codeql.yml  release.yml
app/: AppDelegate.m  Info.plist  LinuxTTY.c  PasteboardDevice.m  PasteboardDeviceLinux.c  Terminal.m  backend_bootstrap.c  backend_bootstrap.h  iOSFS.m
app/FileProvider/: FileProviderEnumerator.m  FileProviderExtension.m  FileProviderItem.m  NSError+ISHErrno.m
asbestos/: asbestos.c  asbestos.h  frame.h  offsets.c
asbestos/gadgets-aarch64/: entry.S  math.S
asbestos_backup/: asbestos.h  asbestos.h.bak  fiber_block.h  fiber_frame.h  gen.c.bak
asbestos_backup/gadgets-aarch64/: bits.S  control.S  memory.S.bak  misc.S.bak  string.S
asbestos_backup/gadgets-aarch64/backups_20260323_202338/: control.S
asbestos_backup/include/: fiber_block.h  fiber_frame.h  list.h
backend/: backend.h  backend_ish_x86.c  backend_linux64_aarch64.c  backend_linux64_stub.c  backend_linux64_x86_64.c  backend_registry.c
compat/: ios_fixes.h
docs/: CHANGELOG.md  CREDITS.md  MESH_RUNTIME_ALIGNMENT.md  REPO_MAP.md  THIRD_PARTY_LICENSES.md
docs/imported/ish64-ritualmesh/ishnext-aarch64-scaffold/: Makefile  Makefile.patch  README-BusyBox.md  README.md
docs/ritualmesh/: INGEST_PLAN.md
emu/: apple_clang.h  backend.h  backend_tinyemu.c
emu/compat/: apple_clang.h  byteswap.h  errno_compat.h  ios_fixes.h
emu/tinyemu/: cutils.h  cutils.h.bak
emu/tinyemu/compat/: byteswap.h
emu/tinyemu/compat.disabled/sys/: statfs.h
emu/tinyemu/compat/linux/: if_tun.h
emu/tinyemu/compat/sys/: sysmacros.h
emu/tinyemu/slirp/: bootp.c  bootp.d  cksum.c  cksum.d  if.c  if.d  ip_icmp.c  ip_icmp.c.bak_patch  ip_icmp.d  ip_input.c  ip_input.c.bak  ip_input.d  ip_output.c  ip_output.d  libslirp.h  libslirp.h.bak  mbuf.c  mbuf.c.bak  mbuf.d  misc.c  misc.d  sbuf.c  sbuf.d  slirp.c  slirp.c.bak5  slirp.c.bak_patch  slirp.d  slirp.h  slirp.h.bak  socket.c  socket.c.bak  socket.c.bak3  socket.c.bak5  socket.c.bak_patch  socket.d  tcp_input.c  tcp_input.c.bak  tcp_input.d  tcp_output.c  tcp_output.d  (+9 more)
emu/tinyemu/slirp/compat/: ios_fixes.h.bak.bak_patch  (+1 more)
fix_backup_1774465744/: calls.c  main.c
fs/: adhoc.c  dev.c  dev.c.bak  dev.h  dev.h.bak.20260306-095940  dev.h.bak.20260306-100450  dev.h.bak_patch  dir.c  dyndev.c  fake-db.c  fake-migrate.c  fake-rebuild.c  fake.c.bak_patch  fs.h  generic.c  lock.c  mem.c  poll.c  poll.c.bak.20260306-101542  pty.c  real.c  real.c.bak  real.c.bak.20260306-101542  real.c.bak.20260306-101831  real.c.bak.20260306-103644  real.c.bak_patch  sock.c  sock.c.bak  sock.c.bak5  sock.h  sockrestart.c  sockrestart.c.bak  stat.c  tmp.c  tmp.c.bak_patch  tty-real.c.bak  tty-real.c.bak_patch  tty.c  tty.c.bak.20260306-095940  tty.c.bak.20260306-100450  (+2 more)
fs/proc/: entry.c  ish.c
iSH.xcodeproj/: project.pbxproj  project.pbxproj.bak_patch
ios/: CMakeLists.txt  File.txt  build_ish64_ios.sh  main.m  main.m.bak  rebuild_ish64.sh  slirp 2.h  slirp 3.h  slirp.h
ios/build-xcode/: CMakeCache.txt  Makefile  cmake_install.cmake
ios/build-xcode/CMakeScripts/: ReRunCMake.make
ios/build-xcode/Debug-iphoneos/ish64_ios.app/: embedded.mobileprovision
ios/build-xcode/ish64_ios.app/: Info.plist
ios/build-xcode/ish64_ios.xcodeproj/: project.pbxproj
kernel/: calls.c  calls.h  cpu_stub.c  errno.c.bak_patch  eventfd.c  exec.c  fs.c  fs.h  fs_info.c  futex.c  getset.c  init.c  init.c.bak3  init.c.bak4  init.c.bak_patch  lock_stub.c  log.c  memory.c  memory.c.bak  memory.c.bak.bak_patch  memory.c.bak_patch  memory.h  mm_stub.c  mmap.c  mmap.c.bak_patch  ptrace.c  signal.c  signal.h  signal.h.bak_patch  syscall_wrappers.h  task.c  time.c  time.c.bak_patch  time.h  vdso_stub.c
loader/: elf64.c  elf64.h  linux64_image.c  linux64_image.h  linux64_stack.c  linux64_stack.h
patches/: ish64-slirp-ios-fixes.patch  slirp-ios-errno.patch  uint32_casts.patch
patches/ritualmesh/ishnext-firstboot-patch/: README-FIRST-BOOT.md
rootfs/: manifest.json.example  rootfs_manifest.c  rootfs_manifest.h
rootfs_profiles/: default_profile
rootfs_profiles/ish-alpine-x86/: manifest.json
rootfs_profiles/linux64-aarch64-test/: manifest.json
rootfs_profiles/slackware64/: manifest.json
scripts/: add_backend_scaffold_to_xcode.rb  add_linux64_core.sh  bootstrap-deps.sh  bootstrap_gitea_brew.sh  bootstrap_ish64_backend.sh  bootstrap_project_docs.sh  build_ish64_scaffold.sh  check-libarchive-pbx.sh  check-pbx-missing-files.py  dev-bootstrap.sh  dev-build.sh  dev-clean.sh  fix-xcode-build.sh  fix_uint32_casts.sh  import_ish64_ritualmesh.sh  ish64_rebuild.sh  patch-libarchive-pbx.py  patch_build_failures.sh  patch_includes.sh  push-all.sh  reset-deps.sh  select_rootfs_profile.sh  setup_guest_os_profiles.sh  setup_repo_docs.sh  upgrade_audit.sh
syscall/: linux_aarch64_syscall.c  linux_aarch64_syscall.h
tools/: build_ios26.sh  fakefs.c  fix_devh_round2.sh  fix_ios26_devops.sh  fix_ios26_real_clean.sh  fix_ios26_round3.sh  fix_ios26_round4.sh  fix_ios26_round5.sh  gen-ios-xcodeproj.sh  make-macos-app.sh  patch_ios26_compat.sh  unicornomatic.c
util/: errno_compat.h  fchdir.c  fchdir.h  posix_compat.h  sync.c  sync.h  sync.h.bak  timer.h  wrlock_compat.h.bak_patch
vdso/: check-cc.sh  meson.build
(+26 files in other folders)
