option('log', type: 'string', value: '')
option('nolog', type: 'string', value: '')
option('log_handler', type: 'string', value: 'dprintf')

option('engine', type: 'combo', choices: ['asbestos', 'unicorn'], value: 'asbestos')
option('kernel', type: 'combo', choices: ['ish', 'linux'], value: 'ish')
option('kconfig', type: 'array', value: [])

option('vdso_c_args', type: 'string', value: '')

option('no_crlf', type: 'boolean', value: false)

option('platform',
  type: 'string',
  value: 'ios',
  description: 'Target platform (used by Xcode; ios/macos/linux etc.)'
)

option('logger',
  type: 'combo',
  choices: ['nslog', 'dprintf'],
  value: 'nslog',
  description: 'Logging backend for iSH'
)
option('log',
  type: 'string',
  value: '',
  description: 'Log channels to enable (space-separated)'
)

option('nolog',
  type: 'string',
  value: '',
  description: 'Log channels to disable (space-separated)'
)

option('vdso',
  type: 'combo',
  choices: ['real', 'stub'],
  value: 'stub',
  description: 'VDSO implementation'
)

